client/src/index.css
.primary-color {
    Background: #e76b50!important;
}

.spacing {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.icon-size {
    font-size: 2rem;
}

.text-header {
    vertical-align: top; 
    font-size:large;
    padding:0.5rem; 
    font-weight:600;
    color: #e76b50;
}
  
nav ul a {
    font-weight: bold!important;
}

.StripeCheckout span {
    background-image: none!important;
    background: gray!important;
    box-shadow: none!important;
}

.button>.inner>button {
    background: gray!important;
}

#addCredit {
    text-transform: capitalize;
    font-size: 1.05rem;
    background: gray;
    font-weight: bold;
}

    

